--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,11 @@
+#ENV=PRODUCTION
 ENV=DEVELOPMENT
-FLASK_RUN_HOST=db8.cse.nd.edu
-FLASK_RUN_PORT=5081
-FLASK_APP=app.py
 
-MYSQL_HOST=localhost
+MYSQL_HOST=db8.cse.nd.edu
+
+#FLASK_RUN_PORT=5081
+FLASK_RUN_PORT=5000
+
 MYSQL_USER=kle2
 MYSQL_PASSWORD=1r1sh
 MYSQL_DB=kle2
